<resources>
    <string name="app_name">Login app</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_login_border">Sign in</string>
    <string name="login_text">Login text</string>
    <string name="button_border">button border</string>
    <string name="magadir">magadir</string>
    <string name="remember_me">Remember Me</string>
    <string name="login">Login</string>
    <string name="email1">Email</string>
    <string name="password">Password</string>
    <string name="title_activity_login">Sign in</string>
    <string name="email">Email</string>
</resources>
